--- a/Back/src/main/resources/application.yml
+++ b/Back/src/main/resources/application.yml
@@ -5,14 +5,14 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/carsdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
-    password:
+    password: ""   # <- vide si pas de mot de passe root, sinon mets-le ici
   jpa:
     hibernate:
-      ddl-auto: update   # crée ou met à jour le schéma automatiquement
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate.format_sql: true
 
-  wt:
-    secret: "je-suis-une-cle"
-    expiration: 3600000   # 1h en millisecondes
+jwt:
+  secret: "this-is-a-very-long-random-secret-key-at-least-32-chars"
+  expiration: 3600000   # 1h en millisecondes
