feat:ajout test d'intégration

--- a/Back/build.gradle
+++ b/Back/build.gradle
@@ -31,13 +31,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
-
     // --- JWT (jjwt) ---
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5' // parser JSON pour jjwt
+    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-    // --- Base de données ---
+    // --- Base de données (prod/dev) ---
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     // --- Lombok ---
@@ -50,6 +49,7 @@ dependencies {
     // --- Tests ---
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'com.h2database:h2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
